[gd_scene load_steps=7 format=3 uid="uid://ckdtp8ltppr5s"]

[ext_resource type="Script" uid="uid://cpucdkx4ew6qg" path="res://dialogue_scene/potion_shop_dialogue.gd" id="1_cxs76"]
[ext_resource type="Theme" uid="uid://dpe6aubqfhehk" path="res://ui_common/empty_button.tres" id="2_3fmjh"]
[ext_resource type="FontFile" uid="uid://yg3ufmt77a5i" path="res://ui_common/GrapeSoda.ttf" id="3_ja8vv"]
[ext_resource type="FontFile" uid="uid://4dbbinfvd0l7" path="res://ui_common/lunchds.ttf" id="4_ud1vb"]

[sub_resource type="Theme" id="Theme_ihgy0"]
default_font = ExtResource("3_ja8vv")
default_font_size = 32
RichTextLabel/colors/default_color = Color(0.775518, 0.308432, 0.738071, 1)
RichTextLabel/fonts/normal_font = ExtResource("3_ja8vv")

[sub_resource type="Theme" id="Theme_vuybj"]
default_font = ExtResource("4_ud1vb")
RichTextLabel/fonts/normal_font = ExtResource("4_ud1vb")

[node name="Start" type="Node2D"]
script = ExtResource("1_cxs76")

[node name="Button" type="Button" parent="."]
offset_left = -32.0
offset_top = -28.0
offset_right = 728.0
offset_bottom = 435.0
mouse_filter = 1
theme = ExtResource("2_3fmjh")
flat = true

[node name="skip" type="Button" parent="Button"]
layout_mode = 0
offset_left = 461.0
offset_top = 329.0
offset_right = 582.0
offset_bottom = 379.0
theme = ExtResource("2_3fmjh")
theme_override_fonts/font = ExtResource("3_ja8vv")
text = "skip intro"

[node name="player_label" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 59.0
offset_top = 175.0
offset_right = 578.0
offset_bottom = 279.0
theme = SubResource("Theme_ihgy0")
bbcode_enabled = true
visible_characters_behavior = 1

[node name="do_something" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 192.0
offset_top = 140.0
offset_right = 619.0
offset_bottom = 244.0
theme = SubResource("Theme_ihgy0")
bbcode_enabled = true
text = "[shake rate=6.0 level=12 connected=1]Do something !"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 97.0
offset_top = 39.0
offset_right = 526.0
offset_bottom = 158.0
theme = SubResource("Theme_vuybj")
theme_override_colors/default_color = Color(0.882353, 0.733333, 0.552941, 1)
bbcode_enabled = true
text = ". . . and this is how I'll bring an end to all evil and save cute, little kittens. "
visible_characters_behavior = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button/skip" to="." method="_on_skip_pressed"]
